k8s/overlays/openshift/delete-ingress.yaml
$patch: delete
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gym-ray-dashboard
  namespace: gym
